# github-user-activity

./: .gitignore  Cargo.toml  README.md  m.json
Docker/: .dockerignore  Dockerfile
src/: cli.rs  lib.rs  main.rs
src/core/: api.rs
src/infra/: functions.rs  mod.rs  names_respositorys.rs  pdf.rs
src/model/: format_output.rs  github_events.rs  mod.rs
tests/: api_integration_test.rs
